--- a/.classpath
+++ b/.classpath
@@ -8,10 +8,9 @@
 			<attribute name="owner.project.facets" value="jst.web;#system#"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_241">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/mlaks/Downloads/junit-4.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mlaks/Downloads/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mlaks/Downloads/servlet-api-0.11.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
